--- a/package.json
+++ b/package.json
@@ -5,9 +5,26 @@
   "main": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
+    "typecheck": "tsc --noUnusedLocals",
+    "lint": "tslint --project tsconfig.json -c tslint.commit.json --fix",
     "prepare": "npm run build",
     "build": "tsc",
     "test": "jest"
+  },
+  "prettier": {
+    "trailingComma": "all"
+  },
+  "lint-staged": {
+    "src/**/*.{ts,tsx}": [
+      "tslint --project tsconfig.json -c tslint.commit.json --fix",
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged && npm run typecheck"
+    }
   },
   "files": [
     "lib"
@@ -16,8 +33,14 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^24.0.15",
+    "husky": "^3.0.0",
     "jest": "^24.8.0",
+    "lint-staged": "^9.0.2",
+    "prettier": "^1.18.2",
     "ts-jest": "^24.0.2",
+    "tslint": "^5.18.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-etc": "^1.5.6",
     "typescript": "^3.5.2"
   },
   "jest": {
